// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Success renders content tailored to Caring Leave 1`] = `
<Fragment>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
          "when-can-i-use-pfml": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
            rel="noopener noreferrer"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsMessage"
      tOptions={
        Object {
          "context": "caringLeave",
        }
      }
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "track-status-link": <a
            href="/applications/status?absence_case_id=NTN-111-ABS-01"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "caringLeave",
        }
      }
    />
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <div
      className="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <Heading
        level="2"
      >
        View status and details for your application
      </Heading>
      <ButtonLink
        className="margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </ButtonLink>
    </div>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Caring Leave 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Caring Leave 3`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if any of these are true:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      You have already taken leave to care for a family member since July 1, 2021
    </li>
    <li
      key="1"
    >
      You have already taken leave since January 1, 2021 for 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
        key="1"
        rel="noopener noreferrer"
        target="_blank"
      >
        any other reason that qualifies for PFML
      </a>
    </li>
    <li
      key="2"
    >
      You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
    </li>
    <li
      key="3"
    >
      You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Caring Leave 4`] = `
<ul
  className="usa-list"
  key="0"
>
  <li
    key="0"
  >
    Your employer has 10 business days to provide feedback on your application.
  </li>
   
  <li
    key="2"
  >
    We’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="4"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
  </li>
  <li
    key="5"
  >
    Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </li>
  <li
    key="6"
  >
    If you need to end your leave early, you must call the DFML Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
    .
  </li>
  <li
    key="7"
  >
    <a
      href="/applications/status?absence_case_id=NTN-111-ABS-01"
      key="0"
    >
      Track the status of your application here
    </a>
    .
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Adoption) 1`] = `
<Fragment>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
          "when-can-i-use-pfml": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
            rel="noopener noreferrer"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsMessage"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "track-status-link": <a
            href="/applications/status?absence_case_id=NTN-111-ABS-01"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <div
      className="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <Heading
        level="2"
      >
        View status and details for your application
      </Heading>
      <ButtonLink
        className="margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </ButtonLink>
    </div>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Adoption) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Family (Bonding Adoption) 3`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if any of these are true:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      You have already taken leave to care for a family member since July 1, 2021
    </li>
    <li
      key="1"
    >
      You have already taken leave since January 1, 2021 for 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
        key="1"
        rel="noopener noreferrer"
        target="_blank"
      >
        any other reason that qualifies for PFML
      </a>
    </li>
    <li
      key="2"
    >
      You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
    </li>
    <li
      key="3"
    >
      You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Family (Bonding Adoption) 4`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your employer has 10 business days to provide feedback on your application.
  </li>
   
  <li
    key="3"
  >
    We’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
  </li>
  <li
    key="6"
  >
    Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </li>
  <li
    key="7"
  >
    <a
      href="/applications/status?absence_case_id=NTN-111-ABS-01"
      key="0"
    >
      Track the status of your application here
    </a>
    .
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 1`] = `
<Fragment>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Alert
      autoWidth={true}
      state="warning"
    >
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="pages.claimsSuccess.proofRequired"
        tOptions={
          Object {
            "context": "bondingAdoptFosterFuture",
          }
        }
      />
    </Alert>
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "track-status-link": <a
            href="/applications/status?absence_case_id=NTN-111-ABS-01"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "bondingAdoptFosterFuture",
        }
      }
    />
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <div
      className="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <Heading
        level="2"
      >
        View status and details for your application
      </Heading>
      <ButtonLink
        className="margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </ButtonLink>
    </div>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 3`] = `"After your child arrives in your home, you will need to upload, mail, or fax a document that shows your child’s placement date."`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 4`] = `
<ul
  className="usa-list"
  key="0"
>
  <li
    key="0"
  >
    Your employer has 10 days to provide feedback on your application.
  </li>
   
  <li
    key="2"
  >
    Once you’ve provided proof of placement, we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="4"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
   
  <li
    key="6"
  >
    If you need to change your leave dates because your child arrived in your home earlier or later than expected, you must call the DFML Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
    .
  </li>
  <li
    key="7"
  >
    If your application is approved prior to your leave, you can expect your first payment to arrive about 3 weeks after your leave starts. Otherwise, you can expect your first payment 2-3 weeks after your leave is approved.
  </li>
  <li
    key="8"
  >
    <a
      href="/applications/status?absence_case_id=NTN-111-ABS-01"
      key="0"
    >
      Track the status of your application here
    </a>
    .
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 1`] = `
<Fragment>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Alert
      autoWidth={true}
      state="warning"
    >
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="pages.claimsSuccess.proofRequired"
        tOptions={
          Object {
            "context": "bondingNewbornFuture",
          }
        }
      />
    </Alert>
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "track-status-link": <a
            href="/applications/status?absence_case_id=NTN-111-ABS-01"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "bondingNewbornFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        <SvgIconCopy
          className="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height={30}
          width={30}
        />
        If you gave birth, you may also be eligible for paid medical leave
      </Heading>
      <p>
        <Trans
          components={
            Object {
              "contact-center-phone-link": <a
                href="tel:(833) 344-7365"
              />,
              "medical-bonding-link": <a
                href="https://www.mass.gov/pfml-medical-bonding"
                rel="noopener noreferrer"
                target="_blank"
              />,
            }
          }
          i18nKey="pages.claimsSuccess.medicalLeaveAfterBirth"
        />
      </p>
    </div>
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <div
      className="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <Heading
        level="2"
      >
        View status and details for your application
      </Heading>
      <ButtonLink
        className="margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </ButtonLink>
    </div>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 3`] = `"After your child is born, you will need to upload, mail, or fax a document that shows your child’s date of birth."`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 4`] = `
<ul
  className="usa-list"
  key="0"
>
  <li
    key="0"
  >
    Your employer has 10 days to provide feedback on your application.
  </li>
   
  <li
    key="2"
  >
    Once you’ve provided proof of birth, we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="4"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
   
  <li
    key="6"
  >
    If you need to change your leave dates because your child was born earlier or later than expected, you must call the DFML Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
    .
  </li>
  <li
    key="7"
  >
    If your application is approved prior to your leave, you can expect your first payment to arrive about 3 weeks after your leave starts. Otherwise, you can expect your first payment 2-3 weeks after your leave is approved.
  </li>
  <li
    key="8"
  >
    <a
      href="/applications/status?absence_case_id=NTN-111-ABS-01"
      key="0"
    >
      Track the status of your application here
    </a>
    .
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 5`] = `
Array [
  "You may be able to take up to 20 weeks of paid medical leave if you’re unable to work during your pregnancy and to recover from childbirth. Your health care provider determines how much medical leave you will need. Call the Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " if you need ",
  <a
    href="https://www.mass.gov/pfml-medical-bonding"
    key="3"
    rel="noopener noreferrer"
    target="_blank"
  >
    medical leave after giving birth
  </a>,
  ".",
]
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 1`] = `
<Fragment>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
          "when-can-i-use-pfml": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
            rel="noopener noreferrer"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsMessage"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "track-status-link": <a
            href="/applications/status?absence_case_id=NTN-111-ABS-01"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        <SvgIconCopy
          className="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height={30}
          width={30}
        />
        If you gave birth, you may also be eligible for paid medical leave
      </Heading>
      <p>
        <Trans
          components={
            Object {
              "contact-center-phone-link": <a
                href="tel:(833) 344-7365"
              />,
              "medical-bonding-link": <a
                href="https://www.mass.gov/pfml-medical-bonding"
                rel="noopener noreferrer"
                target="_blank"
              />,
            }
          }
          i18nKey="pages.claimsSuccess.medicalLeaveAfterBirth"
        />
      </p>
    </div>
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <div
      className="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <Heading
        level="2"
      >
        View status and details for your application
      </Heading>
      <ButtonLink
        className="margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </ButtonLink>
    </div>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 3`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if any of these are true:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      You have already taken leave to care for a family member since July 1, 2021
    </li>
    <li
      key="1"
    >
      You have already taken leave since January 1, 2021 for 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
        key="1"
        rel="noopener noreferrer"
        target="_blank"
      >
        any other reason that qualifies for PFML
      </a>
    </li>
    <li
      key="2"
    >
      You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
    </li>
    <li
      key="3"
    >
      You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 4`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your employer has 10 business days to provide feedback on your application.
  </li>
   
  <li
    key="3"
  >
    We’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
  </li>
  <li
    key="6"
  >
    Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </li>
  <li
    key="7"
  >
    <a
      href="/applications/status?absence_case_id=NTN-111-ABS-01"
      key="0"
    >
      Track the status of your application here
    </a>
    .
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 5`] = `
Array [
  "You may be able to take up to 20 weeks of paid medical leave if you’re unable to work during your pregnancy and to recover from childbirth. Your health care provider determines how much medical leave you will need. Call the Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " if you need ",
  <a
    href="https://www.mass.gov/pfml-medical-bonding"
    key="3"
    rel="noopener noreferrer"
    target="_blank"
  >
    medical leave after giving birth
  </a>,
  ".",
]
`;

exports[`Success renders content tailored to Medical (Not pregnant) 1`] = `
<Fragment>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
          "when-can-i-use-pfml": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
            rel="noopener noreferrer"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsMessage"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "track-status-link": <a
            href="/applications/status?absence_case_id=NTN-111-ABS-01"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <div
      className="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <Heading
        level="2"
      >
        View status and details for your application
      </Heading>
      <ButtonLink
        className="margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </ButtonLink>
    </div>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Medical (Not pregnant) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Medical (Not pregnant) 3`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if any of these are true:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      You have already taken leave to care for a family member since July 1, 2021
    </li>
    <li
      key="1"
    >
      You have already taken leave since January 1, 2021 for 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
        key="1"
        rel="noopener noreferrer"
        target="_blank"
      >
        any other reason that qualifies for PFML
      </a>
    </li>
    <li
      key="2"
    >
      You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
    </li>
    <li
      key="3"
    >
      You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Medical (Not pregnant) 4`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your employer has 10 business days to provide feedback on your application.
  </li>
   
  <li
    key="3"
  >
    We’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
  </li>
  <li
    key="6"
  >
    Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </li>
  <li
    key="7"
  >
    <a
      href="/applications/status?absence_case_id=NTN-111-ABS-01"
      key="0"
    >
      Track the status of your application here
    </a>
    .
  </li>
</ul>
`;

exports[`Success renders content tailored to Medical (Pregnant) 1`] = `
<Fragment>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
          "when-can-i-use-pfml": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
            rel="noopener noreferrer"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsMessage"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "track-status-link": <a
            href="/applications/status?absence_case_id=NTN-111-ABS-01"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        <SvgIconCopy
          className="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height={30}
          width={30}
        />
        You may also be eligible for paid family leave
      </Heading>
      <p>
        <Trans
          components={
            Object {
              "contact-center-phone-link": <a
                href="tel:(833) 344-7365"
              />,
              "medical-bonding-link": <a
                href="https://www.mass.gov/pfml-medical-bonding"
                rel="noopener noreferrer"
                target="_blank"
              />,
            }
          }
          i18nKey="pages.claimsSuccess.familyLeaveToBond"
        />
      </p>
    </div>
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <div
      className="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <Heading
        level="2"
      >
        View status and details for your application
      </Heading>
      <ButtonLink
        className="margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </ButtonLink>
    </div>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Medical (Pregnant) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Medical (Pregnant) 3`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if any of these are true:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      You have already taken leave to care for a family member since July 1, 2021
    </li>
    <li
      key="1"
    >
      You have already taken leave since January 1, 2021 for 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
        key="1"
        rel="noopener noreferrer"
        target="_blank"
      >
        any other reason that qualifies for PFML
      </a>
    </li>
    <li
      key="2"
    >
      You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
    </li>
    <li
      key="3"
    >
      You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Medical (Pregnant) 4`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your employer has 10 business days to provide feedback on your application.
  </li>
   
  <li
    key="3"
  >
    We’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
  </li>
  <li
    key="6"
  >
    Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </li>
  <li
    key="7"
  >
    <a
      href="/applications/status?absence_case_id=NTN-111-ABS-01"
      key="0"
    >
      Track the status of your application here
    </a>
    .
  </li>
</ul>
`;

exports[`Success renders content tailored to Medical (Pregnant) 5`] = `
Array [
  "You may be able to take up to 12 weeks of paid family leave to bond with your child after your medical leave ends. ",
  <a
    href="https://www.mass.gov/pfml-medical-bonding"
    key="1"
    rel="noopener noreferrer"
    target="_blank"
  >
    Family leave to bond with your child
  </a>,
  " can be easily added to your application by calling our Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="3"
  >
    (833) 344‑7365
  </a>,
  " after your medical leave is approved. You should not submit a second application.",
]
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 1`] = `
<Fragment>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
          "when-can-i-use-pfml": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
            rel="noopener noreferrer"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsMessage"
      tOptions={
        Object {
          "context": "medicalPregnantFuture",
        }
      }
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "track-status-link": <a
            href="/applications/status?absence_case_id=NTN-111-ABS-01"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "medicalPregnantFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        <SvgIconCopy
          className="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height={30}
          width={30}
        />
        You may also be eligible for paid family leave
      </Heading>
      <p>
        <Trans
          components={
            Object {
              "contact-center-phone-link": <a
                href="tel:(833) 344-7365"
              />,
              "medical-bonding-link": <a
                href="https://www.mass.gov/pfml-medical-bonding"
                rel="noopener noreferrer"
                target="_blank"
              />,
            }
          }
          i18nKey="pages.claimsSuccess.familyLeaveToBond"
        />
      </p>
    </div>
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <div
      className="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <Heading
        level="2"
      >
        View status and details for your application
      </Heading>
      <ButtonLink
        className="margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </ButtonLink>
    </div>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 3`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if any of these are true:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      You have already taken leave to care for a family member since July 1, 2021
    </li>
    <li
      key="1"
    >
      You have already taken leave since January 1, 2021 for 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
        key="1"
        rel="noopener noreferrer"
        target="_blank"
      >
        any other reason that qualifies for PFML
      </a>
    </li>
    <li
      key="2"
    >
      You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
    </li>
    <li
      key="3"
    >
      You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 4`] = `
<ul
  className="usa-list"
  key="0"
>
  <li
    key="0"
  >
    Your employer has 10 days to provide feedback on your application.
  </li>
  <li
    key="1"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
  <li
    key="2"
  >
    If your application is approved prior to your leave, you can expect your first payment to arrive about 3 weeks after your leave starts. Otherwise, you can expect your first payment 2-3 weeks after your leave is approved.
  </li>
  <li
    key="3"
  >
    <a
      href="/applications/status?absence_case_id=NTN-111-ABS-01"
      key="0"
    >
      Track the status of your application here
    </a>
    .
  </li>
</ul>
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 5`] = `
Array [
  "You may be able to take up to 12 weeks of paid family leave to bond with your child after your medical leave ends. ",
  <a
    href="https://www.mass.gov/pfml-medical-bonding"
    key="1"
    rel="noopener noreferrer"
    target="_blank"
  >
    Family leave to bond with your child
  </a>,
  " can be easily added to your application by calling our Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="3"
  >
    (833) 344‑7365
  </a>,
  " after your medical leave is approved. You should not submit a second application.",
]
`;

exports[`Success renders reportReductionsMessage when there are no other leaves 1`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if any of these are true:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      You have already taken leave to care for a family member since July 1, 2021
    </li>
    <li
      key="1"
    >
      You have already taken leave since January 1, 2021 for 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
        key="1"
        rel="noopener noreferrer"
        target="_blank"
      >
        any other reason that qualifies for PFML
      </a>
    </li>
    <li
      key="2"
    >
      You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
    </li>
    <li
      key="3"
    >
      You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
    </li>
  </ul>,
]
`;
